# IntelligentMapMiner

./: README.md  coordinate-picker.html  coordinate_finder.py  grab_coordinates.py  index.html  mercator.py  persistent_store.py  server.py  style.css  test_persistent_store.py
libraries/: test.py
map_extract_tool/src/: map.html  map_extract.cpp
opencv/: CMakeLists.txt  map_extract.cpp
results/: addresses.csv
scripts/: api.js  coordinates.js
server/: server.py
server/templates/: postupload.html  upload.html
static/: api.js  start_page.js
templates/: index.html  postupload.html  upload.html  upload_error.html
